update unit tests for login and staff flow